--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,5 +17,5 @@ phases:
       - mvn -s settings.xml package
 artifacts:
   files:
-    - target/web-project.war
+    - target/*.war
   discard-paths: false
