appsec.yml file name was corrected and updated in the buildspec.yml file

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,6 +18,6 @@ phases:
 artifacts:
   files:
     - target/*.war
-    - appsepc.yml
+    - appspec.yml
     - scripts/**/*
   discard-paths: false
