--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /target/*.war
+  - source: /target/java-web-project.war
     destination: /usr/share/tomcat/webapps/
 hooks:
   BeforeInstall:
